feat: Jira 401 fix, JS decorations, dashboard i18n, docs
Jira export:
- Add pre-flight auth check (GET /rest/api/3/myself + project) before creating any issue; 401 aborts immediately with one clear error message instead of N errors
- Add abortExport ThreadLocal flag in JiraService; sendJiraCreate skips remaining items on 401/403
- Add GET /api/jira/test endpoint for connection diagnostics
- Add "Test Jira" button in project header UI

UI decorations (PRINCE2 / Scrum accordion):
- Vertical live timeline line (acc-vline) drawn via GSAP ScrollTrigger scrub
- Floating mini-map navigator (fixed right side, one dot per accordion, active tracking)
- Stat counter animation on accordion open (chip numbers count from 0)
- Ripple click effect on accordion headers (GSAP scale + fade)
- Typewriter effect for accordion title on first open

Dashboard:
- All labels use t() i18n (no hardcoded text)
- Semi-transparent colored panel backgrounds (dp-p2, dp-sc, dp-risk)
- IntersectionObserver scroll-reveal for rows, panels, timeline nodes

Docs:
- Rewrite README.md (full feature table, API reference, Jira troubleshooting)
- Add CHANGELOG.md documenting all changes from project start

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>